Try to fix whitespace

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,7 @@
 .rule {
   background-color: lightgray;
 }
+
+.content p {
+  white-space: pre-wrap;
+}
